# sdk-python

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agent/: API.md  ARCHITECTURE.md  DECISIONS.md  PROGRESS.md  TESTING.md
ainrve/: __init__.py  _client.py  _exceptions.py  _http.py  _models.py  _streaming.py  _version.py
ainrve/resources/chat/: completions.py
ainrve/types/: chat_completion.py  stream.py
tests/: conftest.py  test_chat.py  test_client.py  test_exceptions.py  test_http.py  test_migration.py  test_streaming.py
