[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainrve"
version = "0.1.0"
description = "Python SDK for aiNrve — drop-in OpenAI replacement with smart routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "aiNrve", email = "hello@ainrve.dev"}]
keywords = ["llm", "ai", "routing", "openai", "anthropic", "groq"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "openai>=1.0.0",
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "respx>=0.20",
  "hatch",
  "build>=1.2.0",
]

[project.urls]
Homepage = "https://ainrve.dev"
Repository = "https://github.com/aiNrve/sdk-python"
Documentation = "https://docs.ainrve.dev"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
